#
# Copyright (C) 2022  Autodesk, Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

IF(RV_TARGET_LINUX
   OR RV_TARGET_WINDOWS
)
  ADD_SUBDIRECTORY(nedmalloc)
ENDIF()
ADD_SUBDIRECTORY(resample)
ADD_SUBDIRECTORY(IL)
ADD_SUBDIRECTORY(freetype)
ADD_SUBDIRECTORY(lcms)
ADD_SUBDIRECTORY(LibRaw)
ADD_SUBDIRECTORY(FTGL)
ADD_SUBDIRECTORY(cxcore)
ADD_SUBDIRECTORY(tiff)
ADD_SUBDIRECTORY(OpenColorIO)
ADD_SUBDIRECTORY(tinyxml)
ADD_SUBDIRECTORY(yaml)
ADD_SUBDIRECTORY(yaml_cpp)
ADD_SUBDIRECTORY(mp4v2)
ADD_SUBDIRECTORY(minizip)
ADD_SUBDIRECTORY(cv)
ADD_SUBDIRECTORY(eigen)
ADD_SUBDIRECTORY(arg)

IF(RV_TARGET_WINDOWS)
  ADD_SUBDIRECTORY(gc)
  ADD_SUBDIRECTORY(glew)
  ADD_SUBDIRECTORY(pcre)
  ADD_SUBDIRECTORY(win_pthreads)
  ADD_SUBDIRECTORY(win_posix)
ENDIF()

ADD_SUBDIRECTORY(png16)
ADD_SUBDIRECTORY(exif)
ADD_SUBDIRECTORY(openjpeg)
ADD_SUBDIRECTORY(webp)
ADD_SUBDIRECTORY(OpenImageIO)
ADD_SUBDIRECTORY(gtoModule)
ADD_SUBDIRECTORY(PyOpenColorIO)
ADD_SUBDIRECTORY(qtcolortriangle)
