#
# Copyright (C) 2022  Autodesk, Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

IF(RV_TARGET_LINUX
   OR RV_TARGET_WINDOWS
)
  ADD_SUBDIRECTORY(nedmalloc)
ENDIF()
ADD_SUBDIRECTORY(resample)
ADD_SUBDIRECTORY(IL)
ADD_SUBDIRECTORY(FTGL)
ADD_SUBDIRECTORY(cxcore)
ADD_SUBDIRECTORY(tinyxml)
ADD_SUBDIRECTORY(yaml)
ADD_SUBDIRECTORY(mp4v2)
ADD_SUBDIRECTORY(minizip)
ADD_SUBDIRECTORY(cv)
ADD_SUBDIRECTORY(eigen)
ADD_SUBDIRECTORY(arg)

IF(RV_TARGET_WINDOWS)
  ADD_SUBDIRECTORY(gc)
  ADD_SUBDIRECTORY(glew)
  ADD_SUBDIRECTORY(win_pthreads)
  ADD_SUBDIRECTORY(win_posix)
ENDIF()

ADD_SUBDIRECTORY(exif)
ADD_SUBDIRECTORY(gtoModule)
ADD_SUBDIRECTORY(qtcolortriangle)
